added edits to content and styling

--- a/index.html
+++ b/index.html
@@ -1,2 +1,46 @@
-<h1>Michael Morosa</h1>
-<h3>Software Engineer</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Personal Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Website</h1>
+        <p>I'm Michael Morosa, a Software Engineer.</p>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hi, I'm Michael. I'm a software engineer at Northrop Grumman. I'm a highly motivated developer, constantly seeking new, challenging, and exciting opportunities to improve my abilities.
+
+            If you'd like to join me for the next challenge or are just interested in the site, please feel free to look around or find me on social media.
+
+            Thanks for visiting!
+        </p>
+    </section>
+
+    <section id="portfolio">
+        <h2>Portfolio</h2>
+        <div class="project">
+            <h3>Project 1</h3>
+            <p>Description of the project.</p>
+        </div>
+        <div class="project">
+            <h3>Project 2</h3>
+            <p>Description of the project.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out at <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    </section>
+
+    <footer>
+        <p>© 2024 Michael Morosa. All rights reserved.</p>
+    </footer>
+</body>
+</html>
