added minor changes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <section>
         <h1>Michael Morosa</h1>
-    </header>
+    </section>
 
     <section id="about">
         <h2>About Me</h2>
@@ -35,11 +35,10 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Feel free to reach out at <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>Feel free to reach out to me on <a href="https://www.linkedin.com/in/michael-morosa-60158117a/">LinkedIn</a></p>
     </section>
 
     <footer>
-        <p>© 2024 Michael Morosa. All rights reserved.</p>
     </footer>
 </body>
 </html>
