added minor changes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <header>
         <h1>Michael Morosa</h1>
-    </section>
+    </header>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I'm Michael. I'm a software engineer at Northrop Grumman. I'm a highly motivated developer, constantly seeking new, challenging, and exciting opportunities to improve my abilities.
+        <p> Hi, I'm a software engineer at Northrop Grumman who is highly-motivated, constantly seeking new, challenging, and exciting opportunities to improve my abilities.
 
-            If you'd like to join me for the next challenge or are just interested in the site, please feel free to look around or find me on social media.
+            If you'd like to join me for the next challenge or are just interested in the site, please feel free to look around or find me on LinkedIn.
 
             Thanks for visiting!
         </p>
@@ -35,7 +35,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Feel free to reach out to me on <a href="https://www.linkedin.com/in/michael-morosa-60158117a/">LinkedIn</a></p>
+        <p>Feel free to reach out on <a href="https://www.linkedin.com/in/michael-morosa-60158117a/">LinkedIn</a></p>
     </section>
 
     <footer>
