--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p> Hi, I'm a software engineer at Northrop Grumman who is highly-motivated, constantly seeking new, challenging, and exciting opportunities to improve my abilities.
+        <p> Hi, I'm a software engineer at Northrop Grumman who is highly-motivated and constantly seeking new, challenging, and exciting opportunities to improve my abilities.
 
             If you'd like to join me for the next challenge or are just interested in the site, please feel free to look around or find me on LinkedIn.
 
@@ -22,15 +22,7 @@
     </section>
 
     <section id="portfolio">
-        <h2>Portfolio</h2>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of the project.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of the project.</p>
-        </div>
+        <h2>Portfolio (Coming Soon)</h2>
     </section>
 
     <section id="contact">
